Add toggle to user settings for ty emails
